[project]
name = "dhivehi-benchmark"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "google-generativeai>=0.8.4",
    "instructor>=1.7.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100


[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # undefined names
    "F821",
]



[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true